--- a/wk1/d1.md
+++ b/wk1/d1.md
@@ -49,4 +49,11 @@ public:
 ```
 
 Explaination:
+Using a hashmap to store counts of the elements.
+Then looping through again to check if counts is 1.
 
+Time complexity:
+O(2N) -> O(N)
+
+Space complexity:
+O(N)
