Minor english mistake

--- a/wk1/d2.md
+++ b/wk1/d2.md
@@ -54,7 +54,7 @@ Explaination:
 We use a hashset/unordered set to keep track of past seen nums.  
 Then we have a help function to get the next number based on the algo.  
 
-Not so sure about the time complexity, but I think its O(N) because we only go through the number we have to check once.  
+Not so sure about the time complexity, but I think its O(N) because we only go through the numbers we have to check once.  
 
 Time Complexity:  
 O(N)?  
