--- a/wk2/d12.md
+++ b/wk2/d12.md
@@ -31,12 +31,33 @@ we combine 1 and 1 to get 0 so the array converts to [1] then that's the value o
 
 Solution: 
 ```cpp
+ass Solution:
+    def lastStoneWeight(self, stones: List[int]) -> int:
+        if(stones == []):
+            return 0
+        elif(len(stones) == 1):
+            return stones[0]
+        stones.sort()
+        while(len(stones) > 1):
+            y = stones.pop()
+            x = stones.pop()
+            if(x == y):
+                stones.append(0)
+                stones.sort()
+            else:
+                stones.append(y - x)
+                stones.sort()
+        return stones[0]
 
 ```
 
 Explaination:  
+I used the naive method of sorting all the stones and taking the last 2 largest stones and smash them together.  
+Not too sure what a binary heap is but I think the process is quite similar.
 
 Time Complexity:  
+O(N log N)? im not sure
 
 Space Complexity:  
+O(N) Cause the largest of the reserved size of the stones is N itself.
 
