--- a/wk4/d26.md
+++ b/wk4/d26.md
@@ -81,12 +81,71 @@ Now below is using memorization to store results to try and get the time complex
 
 Recursive with memorization:  
 ```cpp
+class Solution {
+vector<vector<int>> mem;
+public:
+    int longestCommonSubsequence(string text1, string text2) {
+        mem.resize(text1.size() + 1, vector<int>(text2.size() + 1, -1));
+        return lcs(text1, text2, text1.size(), text2.size());     
+    }
+    int lcs(string t1, string t2, int n, int m){
+        if(mem[n][m] > -1){
+            return mem[n][m];
+        }
+        if(n == 0 || m == 0){
+            mem[n][m] = 0;
+            return 0;
+        }
+        if(t1[n-1] == t2[m-1]){
+            mem[n][m] = 1 + lcs(t1, t2, n-1, m-1);
+            return mem[n][m]
+        }
+        else{
+            mem[n][m] = max(lcs(t1, t2, n-1, m), lcs(t1, t2, n, m-1));
+            return mem[n]
+        }
+    }
+};
+```
 
+Explaination:   
+Using a matrix to store the past values of n, m we can cut down the time complexity.    
+
+Time complexity?
+
+Space Complexity?
+
+
+Final DP solution:
+```cpp
+class Solution {
+public:
+    int longestCommonSubsequence(string t1, string t2) {
+        const int n = t1.size(), m = t2.size();
+        vector<vector<int>> dp(n + 1, vector<int>(m + 1, 0));
+        for(int i=1; i<n + 1; i++){
+            for(int j=1; j<m + 1; j++){
+                if(t1[i-1] == t2[j-1]){
+                    dp[i][j] = 1 + dp[i-1][j-1];
+                }
+                else{
+                    dp[i][j] = max(dp[i-1][j], dp[i][j-1]);
+                }
+            }
+        }
+        return dp[n][m];
+    }
+};
 ```
 
 Explaination:  
+Based on the previous memorization approach, we realise that if we model it as a dp problem,  
+dp[i][j] = 1 + dp[i-1][j-1]
+dp[i][j] = min(dp[i-1][j], dp[i][j-1])
 
 Time Complexity:  
+O(N * M) We go through N * M at most
 
 Space Complexity:  
+O(N * M) Space 
 
