--- a/wk3/d15.md
+++ b/wk3/d15.md
@@ -3,10 +3,19 @@
 Question:  
 ```
 Given an array nums of n integers where n > 1,  return an array output such that output[i] is equal to the product of all the elements of nums except nums[i].
+
+Constraint: It's guaranteed that the product of the elements of any prefix or suffix of the array (including the whole array) fits in a 32 bit integer.  
+
+Note: Please solve it without division and in O(n).
+
+Follow up:
+Could you solve it with constant space complexity? (The output array does not count as extra space for the purpose of space complexity analysis.)
 ```
 
 Example 1:  
 ```
+Input:  [1,2,3,4]
+Output: [24,12,8,6]
 
 ```
 
@@ -14,11 +23,34 @@ Example 1:
 Solution: 
 
 ```cpp
+class Solution {
+public:
+    vector<int> productExceptSelf(vector<int>& nums) {
+        vector<int> prod_nums(nums.size());
+        int current_prod = 1;
+        for(int i=0; i<nums.size(); i++){
+            prod_nums[i] = current_prod;
+            current_prod *= nums[i];
+        }
+        current_prod = 1;
+        for(int i=nums.size()-1; i>-1; i--){
+            prod_nums[i] *= current_prod;
+            current_prod *= nums[i];
+        }
+        return prod_nums;
+    }
+};
 ```
 
 Explaination:  
+Thinking through it, as you pass through the arr, you get the product of all the number before the current num.  
+Thus using 2 passes, 0 -> n-1 and n-1 -> 0  
+We can get the product of all nums except the index itself.  
+As since we are using the result arr to store the products, it is constant space.
 
 Time Complexity:  
+O(2N) -> O(N)
 
 Space Complexity:  
+O(1)
 
