fixing d21 md image path

--- a/wk3/d21.md
+++ b/wk3/d21.md
@@ -3,11 +3,11 @@
 Big note, leetcode went ahead and made the last challenge on ever week premium so I did solve this, but now I can't even see my own solution.  
 What a bummer :C
 
-![Curses D21]('./d21_curses.png')
+![Curses D21](./d21_curses.png)
 
 Question:  
 This will just be a screenshot.  
-![d21_question]('./d21_q.png')
+![d21_question](./d21_q.png)
 
 Solution: 
 
