--- a/wk4/d24.md
+++ b/wk4/d24.md
@@ -123,7 +123,4 @@ get -> O(1)
 Space Complexity:  
 O(2N) both hashmap
 
-Other solution using double linked list and hashmap:  
-```cpp
-```
-
+Side note: I tired to do the double linked list approach, but my cpp skills with classes and objs are not that good.
