Adding titles for wk1

--- a/wk1/d5.md
+++ b/wk1/d5.md
@@ -1,5 +1,7 @@
 # Day 5
 
+## Best Time to Buy and Sell Stock II
+
 Question:  
 ```
 Say you have an array prices for which the ith element is the price of a given stock on day i.
