--- a/wk1/d1.md
+++ b/wk1/d1.md
@@ -1,5 +1,7 @@
 # Day 1
 
+## Single Number
+
 Question: 
 ```
 Given a non-empty array of integers, every element appears twice except for one. Find that single one.
