--- a/wk1/d3.md
+++ b/wk1/d3.md
@@ -1,5 +1,7 @@
 # Day 3
 
+## Maximum Subarray
+
 Question: 
 ```
 Given an integer array nums, find the contiguous subarray (containing at least one number) which has the largest sum and return its sum.
