--- a/wk1/d4.md
+++ b/wk1/d4.md
@@ -1,5 +1,7 @@
 # Day 4
 
+## Move Zeroes
+
 Question:  
 ```
 Given an array nums, write a function to move all 0's to the end of it while maintaining the relative order of the non-zero elements.
