add title for week 2

--- a/wk2/d14.md
+++ b/wk2/d14.md
@@ -1,5 +1,7 @@
 # Day 14
 
+## Perform String Shifts
+
 Question:  
 ```
 You are given a string s containing lowercase English letters, and a matrix shift, where shift[i] = [direction, amount]:
