--- a/wk2/d10.md
+++ b/wk2/d10.md
@@ -1,5 +1,7 @@
 # Day 10
 
+## Min Stack
+
 Question:  
 ```
 Design a stack that supports push, pop, top, and retrieving the minimum element in constant time.
