--- a/wk2/d13.md
+++ b/wk2/d13.md
@@ -1,5 +1,7 @@
 # Day 13
 
+## Contiguous Array
+
 Question:  
 ```
 Given a binary array, find the maximum length of a contiguous subarray with equal number of 0 and 1.
