--- a/wk2/d8.md
+++ b/wk2/d8.md
@@ -1,5 +1,7 @@
 # Day 8
 
+## Middle of the Linked List
+
 Question:  
 ```
 Given a non-empty, singly linked list with head node head, return a middle node of linked list.
