adding titles for wk3

--- a/wk3/d15.md
+++ b/wk3/d15.md
@@ -1,5 +1,7 @@
 # Day 15
 
+## Product of Array Except Self
+
 Question:  
 ```
 Given an array nums of n integers where n > 1,  return an array output such that output[i] is equal to the product of all the elements of nums except nums[i].
