--- a/wk3/d21.md
+++ b/wk3/d21.md
@@ -1,5 +1,7 @@
 # Day 21
 
+## Leftmost Column with at least a One
+
 Big note, leetcode went ahead and made the last challenge on ever week premium so I did solve this, but now I can't even see my own solution.  
 What a bummer :C
 
