--- a/wk3/d18.md
+++ b/wk3/d18.md
@@ -1,5 +1,7 @@
 # Day 18
 
+## Minimum Path Sum
+
 Question:  
 ```
 Given a m x n grid filled with non-negative numbers, find a path from top left to bottom right which minimizes the sum of all numbers along its path.
