Adding wk4 titles

--- a/wk4/d26.md
+++ b/wk4/d26.md
@@ -1,5 +1,7 @@
 # Day 26
 
+## Longest Common Subsequence
+
 Question:  
 ```
 Given two strings text1 and text2, return the length of their longest common subsequence.
