--- a/wk4/d28.md
+++ b/wk4/d28.md
@@ -1,5 +1,7 @@
 # Day 28
 
+## First Unique Number
+
 Question:  
 ```
 You have a queue of integers, you need to retrieve the first unique integer in the queue.
